1998-12-09  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmPager/x_pager.c (SwitchToDeskAndPage):
	(DispatchEvent): patch to make desk changing via button 3 work.

1998-12-08  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmPager/x_pager.c (Scroll): fixed another mouse-button-3 bug. You
	can now consistently reach the left/top border of page 0 0.
	(IconScroll): merged with function Scroll
	(DispatchEvent): changed Scroll signature
	(Scroll): Changed signature and removed code limiting movement to 100%
	of the desktop size. What was this good for?

1998-12-04  Dominik Vogt  <dominik_vogt@hp.com>

	* modules/FvwmButtons/parse.c (match_string): fixed 'up' panels as
	default

1998-12-04  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmPager/FvwmPager.1: documented new button 3 behaviour

	* FvwmPager/x_pager.c (SwitchToDeskAndPage): removed unnecessary ifdef
	(Scroll): fixed mouse-button-3 bug with multiple desktops.
	(DispatchEvent): pressing mouse button 3 allows to switch desktops now.
	Moving and releasing the mouse still does not switch desktops.

1998-12-04  Paul D. Smith  <psmith@gnu.org>

	* FvwmPager/FvwmPager.c (ParseOptions): Free BalloonFore variable
	when processing that option, not BalloonBack.  Reported with
	suggested solution by Robert H. Ford II <rhford2@lucent.com>

1998-11-28  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmButtons/FvwmButtons.c (Slide): fixed panels overlapping button
	under certain circumstances.

1998-11-25  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmPager/FvwmPager.c: fixed some memory leaks

	* FvwmPager/x_pager.c: reindented some code

1998-11-25  Paul D. Smith  <psmith@gnu.org>

	* FvwmCpp/FvwmCpp.1: Don't use multi-word values with .IP.  Use .TP.
	* FvwmM4/FvwmM4.1: Ditto.

1998-11-24  Dominik Vogt  <dominik_vogt@hp.com>

	* FvwmButtons/TODO: updated

	* FvwmButtons/button.c (alloc_button): uninitialised fields bug fixed

	* FvwmButtons/parse.c (trimleft): replaced macro trimleft by a function
	trimleft.